# handcalcs

./: .gitignore  .travis.yml  EngTemplate.tex  README.md  eqn_lib.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test_handcalcs.py  vis_pyproject.toml  wiki_text.md
.circleci/: config.yml
.github/workflows/: python-publish.yml  python-pytest.yml
Examples/: eqn_lib.py  streamlit_example.py
New folder/: streamlit_example.py
docs/: README.md  about.md  cell_magic.md  conf.py  configuration.md  decorator.md  features.md  index.md  index.rst  installation.md  overrides.md  sympy.md
handcalcs/: EngTemplate.tex  __init__.py  array2latex.py  config.json  constants.py  decorator.py  exporters.py  global_config.py  handcalcs.py  handrender.py  install_templates.py  integrations.py  numpy_and_pandas_patches.py  render.py  streamlit_example.py  sympy_kit.py  template.py  test_handcalcs.py  test_results.py
handcalcs/.ipynb_checkpoints/: handcalcs scratch-checkpoint.ipynb
handcalcs/handcalcs_html/: __init__.py
handcalcs/handcalcs_html/classic/: base.html.j2  index.html.j2
handcalcs/templates/html/: full_html_noinputs.tpl
handcalcs/templates/latex/: t-makaro_classic_romanoutput_noinput.tplx
src/handcalcs/: __init__.py  ast_parser.py  blocks.py  calcline.py  config.json  constants.py  decorator.py  handcalc_cell.py  handcalcs.py  helpers.py  render.py  swaps.py
src/handcalcs/handcalcs_html/: __init__.py
src/handcalcs/parsing/: ast_parser.py  blocks.py  commands.py  comments.py  linetypes.py  source_expander.py
src/handcalcs/transformers/: augmented_assign.py  expression_rules.py  expressions.py  remove_docstring.py  replace_identifiers.py
test_handcalcs/: #test_handcalcs.py  cell_1.py  cell_10.py  cell_11.py  cell_2.py  cell_2b.py  cell_3.py  cell_4.py  cell_5.py  cell_6.py  cell_7.py  cell_7b.py  cell_8.py  cell_9.py  error_cell.py  function_mocks.py  test_handcalcs_file.py  test_pint.py  test_render_file.py  test_sympy_kit.py
tests/: cell_1.py  cell_10.py  cell_2b.py  cell_3.py  cell_5.py  cell_7.py  cell_7b.py  cell_9.py  function_mocks.py  submodule_1.py  submodule_2.py  test_decorator_file.py  test_handcalcs.py  test_parser.py  test_render_file.py  test_sympy_kit.py
