[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "handcalcs"
authors = [{name = "Connor Ferster", email = "connorferster@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "more_itertools",
    "innerscope >= 0.7.0",
    "pyparsing"
]

[project.urls]
Source = "https://github.com/connorferster/handcalcs"


[project.optional-dependencies]

exporters = [
    "nb-hideinputs",
]

test = [
    "pytest >= 8.0.0",
    "pytest-cov >= 4.1.0",
    "coverage[toml] >= 5.5.0",
    "pint >= 0.23",
    "sympy",
]

dev = [
    "jupyterlab >= 4.0.0",
    "forallpeople >= 2.0",
    "black",
    "pint >= 0.23",
    "sympy",
]

doc = ["sphinx"]

[tool.coverage.paths]
source = ['handcalcs', '*/site-packages']

[tool.coverage.run]
branch = true
source = ['handcalcs']

[tool.coverage.report]
show_missing = true