[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "handcalcs"
authors = [{name = "Connor Ferster", email = "connorferster@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dynamic = ["version", "description"]
dependencies = [
    "more_itertools",
    "innerscope >= 0.7.0",
    "pyparsing",
    "ast-comments>=1.2.3",
]

[project.urls]
Source = "https://github.com/connorferster/handcalcs"


[project.optional-dependencies]
exporters = [
    "nb-hideinputs",
]


doc = ["sphinx"]

[tool.coverage.paths]
source = ['handcalcs', '*/site-packages']

[tool.coverage.run]
branch = true
source = ['handcalcs']

[tool.coverage.report]
show_missing = true

[dependency-groups]
dev = [
    "pint>=0.24.4",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "sympy>=1.14.0",
    "jupyterlab>=4.4.4",
    "forallpeople>=2.7.1",
    "black>=25.1.0",
]
